# 4d_thesis

./: .gitignore  README.md
src/launchers/: CMakeLists.txt  package.xml
src/launchers/launch/: d435_urdf_loader.py  d435i_urdf_loader.py  demo.py  navigation.py  os1_urdf_loader.py  ouster_os1.py  realsense_d435.py  realsense_d435i.py  scout_odometry.py  scout_urdf_loader.py  sensors_transforms.py
src/launchers/rviz/: d435.rviz  d435i.rviz  demo.rviz  os1.rviz  scout_odometry.rviz
src/nav_t_poses/: package.xml  setup.cfg  setup.py
src/nav_t_poses/nav_t_poses/: navigate_t_poses.py
src/ouster-ros/ouster-ros/config/: driver_params.yaml  viz.rviz
src/ouster-ros/ouster-ros/launch/: driver.launch.py
src/saving_pose/: data_poses.csv  goandturn.csv  poses_data.csv
src/saving_pose/save_poses/: CMakeLists.txt  package.xml
src/saving_pose/save_poses/src/: save_poses_node.cpp
src/scout_2/: CMakeLists.txt  package.xml
src/scout_2/config/: controller_configuration.yaml  ekf_w_gps.yaml  main.rviz  mapper_params_online_async.yaml  mapviz_gps.mvc  navigate_through_poses_w_replanning_and_recovery.xml  navigate_to_pose_if_path_bacome_invalid.xml  navigate_to_pose_w_replanning_and_recovery.xml  navigate_w_recovery_and_replanning_only_if_path_becomes_invalid.xml
src/scout_2/launch/: bringup_launch.py  dual_ekf_navsat.launch.py  gps_gazebo.launch.py  gps_navigation_launch.py  listener.launch.py  localization_launch.py  mapviz.launch.py  nav_gps_launch.py  navigation_launch.py  online_async_launch.py  scout2_gazebo.py  slam_launch.py
src/scout_2/maps/: cropfield.pgm  cropfield.yaml  cropfield2.pgm  cropfield2.yaml  labirinto.pgm  labirinto.yaml  labirinto_final.pgm  labirinto_final.yaml  labirinto_gps.pgm  labirinto_gps.yaml  labirinto_plugin.pgm  labirinto_plugin.yaml
src/scout_2/params/: nav2_params.yaml  nav2_params_nomap.yaml
src/scout_2/rviz/: main.rviz
src/scout_2/urdf/: empty.urdf  scout.urdf  scout_prova.xacro  scout_v2.gazebo  scout_v2.xacro  scout_wheel.gazebo  scout_wheel_type1.xacro  scout_wheel_type2.xacro
src/scout_2/worlds/: cropfield.world  labirinto_2_test.world  labirinto_test.world  sonoma_raceway.world  sonoma_raceway_modi.world
src/scout_2/worlds/labirinto/: model.config  model.sdf
src/scout_2/worlds/labirinto_2/: model.config  model.sdf
src/scout_2/worlds/path/: model.sdf
src/scout_ros2/scout_base/src/: scout_base_ros.cpp
src/scout_ros2/scout_msgs/: CMakeLists.txt  package.xml
src/urdf_description/: CMakeLists.txt  package.xml
src/urdf_description/urdf/bunker/: bunker.urdf
src/urdf_description/urdf/scout/: scout.urdf
src/urdf_description/urdf/sensors/: d435.urdf  d435i.urdf  os1.urdf
