<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav_t_poses</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="marco.indino98@gmail.com">marco</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_util</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>nav2_amcl</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>navigation2</depend>
  <depend>nav2_common</depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
