<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

    <name>urdf_description</name>
    <version>0.0.1</version>
    <description>URDF description of the robot and its sensors.</description>
    <maintainer email="leonardo.gargani@mail.polimi.it">Leonardo Gargani</maintainer>
    <license>Apache License 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <build_depend>ros_environment</build_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>

    <exec_depend>joint_state_publisher</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>rviz</exec_depend>
    <exec_depend>xacro</exec_depend>

</package>
